syntax = "proto3";
package stafihub.stafihub.claim;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "claim/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/stafihub/stafihub/x/claim/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stafihub/stafihub/claim/params";
  }
  // Queries a list of IsClaimed items.
	rpc IsClaimed(QueryIsClaimedRequest) returns (QueryIsClaimedResponse) {
		option (google.api.http).get = "/stafihub/stafihub/claim/is_claimed/{round}/{index}";
	}

// Queries a list of ClaimSwitch items.
	rpc ClaimSwitch(QueryClaimSwitchRequest) returns (QueryClaimSwitchResponse) {
		option (google.api.http).get = "/stafihub/stafihub/claim/claim_switch/{round}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryIsClaimedRequest {
  uint64 round = 1;
  uint64 index = 2;
}

message QueryIsClaimedResponse {
  bool isClaimed = 1;
}

message QueryClaimSwitchRequest {
  uint64 round = 1;
}

message QueryClaimSwitchResponse {
  bool isOpen = 1;
}

// this line is used by starport scaffolding # 3
